--- a/connexion.html
+++ b/connexion.html
@@ -26,7 +26,7 @@
             </div><!-- fin div logo-->
             <div id="navbar">
                 <nav>
-                    <a href="Acceuil.html">Acceuil</a>
+                    <a href="connexion.html">Acceuil</a>
                     <a href="Acceuil.html">Agenda</a>
                     <a href="Acceuil.html">Evenement</a>
                 </nav>
@@ -48,11 +48,12 @@
                 <img id="naileditgif" src="nailedit.gif" alt="nailedit">
             </div>
             <div id="txtarticle1">
-                <p id="ouverture">Yeeha ! Le site ouvre partiellement ses portes !!!
-                    Vous pouvez enfin avoir un apreçu de notre projet, nous vous inviton à nous donnez vos retours par
-                    email à l'adresse themighty80@gmail.com
+                <p id="ouverture"><span id="aligncenter"><strong>Yeeha !</strong></br> Le site ouvre partiellement ses portes !!!</span>
+                </p>
+                <p>Vous pouvez enfin avoir un <strong>apreçu</strong> de notre projet, nous vous inviton à nous donnez vos retours par
+                    email à l'adresse <a href="mailto:themighty80@gmail.com">themighty80</a>.</br>
                     Le site étant encore sous travaux veuillez nous excusez pour les pages non fonctionelles, nos devs
-                    travaille d'arache pied pour vous offrir une experience de qualitée.
+                    travaillent d'arache pied pour vous offrir une experience de qualitée.
                 </p>
             </div>
             <div id="workerlove">
@@ -67,15 +68,15 @@
             <div id="txtarticle2">
                 <p id="nosvaleurs">
                     Désireux de réveiller le monde de la nuit et plus particulièrement cette ambiance qui lui tenait a
-                    coeur "Directeur générique" s'est investi a 200% dans ce projet.
-                    Aprés de longues préparation, et entouré d'un staff de passionés ce projet porté par nos membres et
-                    notre communautée touche finalement au but, nous tenons tout d'abord à vous remercier pour ca! Sans
+                    coeur <strong>"Directeur générique" s'est investi a 200% dans ce projet.</strong> </br></br>
+                    Aprés de <strong>longues préparation</strong>, et entouré d'un <strong>staff de passionés</strong> ce projet porté par nos membres et
+                    notre communautée <strong>touche finalement au but</strong>, nous tenons tout d'abord à vous remercier pour ca! Sans
                     vous ca aurait été impossible !!
-                    Nous espérons vous faire revivre cette ambiance et cette époque magique qu'etait les années 80" et
+                    Nous espérons vous faire revivre cette ambiance et cette époque <strong>magique</strong> qu'etait les années 80" et
                     partager avec vous notre passion.
-                    Notre équipe est prete à vous recevoir tous les weekend dans nos locaux pour réveiller la fièvre
-                    disco parmis vous !!
-                    Retrouvez une ambiance digne des année 80" avec tout le confort moderne, venez nombreux !!
+                    Notre équipe est prete à vous recevoir tous les weekend dans nos locaux pour <strong>réveiller la fièvre
+                    disco parmis vous !!</strong>
+                    Retrouvez une ambiance digne des année 80" avec tout le confort moderne, <strong>venez nombreux !!</strong>
                 </p>
             </div>
         </div> <!-- Fin div article2 -->
@@ -87,15 +88,17 @@
             </div>
             <div id="align2">
                 <p id="legaletliens">
-                    <a href="www.laplateforme.io">Laplateforme.io 2019</a>
+                    <a href="www.laplateforme.io" id="testlink">Laplateforme.io 2019</a>
                 </p>
             </div>
         </div>
         <div id="navbar2">
-                    <a href="Acceuil.html">Acceuil</a>
-                    <a href="Acceuil.html">Agenda</a>
-                    <a href="Acceuil.html">Evenement</a>
+            <div id="navbar2align">
+                <a href="Acceuil.html">Acceuil</a>
+                <a href="Acceuil.html">Agenda</a>
+                <a href="Acceuil.html">Evenement</a>
             </div>
+        </div>
     </footer>
 </body>
 
