--- a/connexion.html
+++ b/connexion.html
@@ -27,8 +27,8 @@
             <div id="navbar">
                 <nav>
                     <a href="connexion.html">Acceuil</a>
-                    <a href="Acceuil.html">Agenda</a>
-                    <a href="Acceuil.html">Evenement</a>
+                    <a href="../work-in-progress/work-in-progress.html">Agenda</a>
+                    <a href="../work-in-progress/work-in-progress.html">Evenement</a>
                 </nav>
             </div>
             <div id="input">
