--- a/inscription.html
+++ b/inscription.html
@@ -47,17 +47,17 @@
             <label for="login">Pseudo</label>
             <input type="texte" id="nomdecompte" name="login" placeholder="Funkycops80" required>
             <label for="motdepasse">Mot de passe</label>
-            <input type="password" id="motdepasse" name="motdepasse" placeholder="******"required>
+            <input type="password" id="motdepasse" name="motdepasse" placeholder="******" required>
             <label for="motdepasseconfirm">Confirmez votre mot de passe</label>
-            <input type="password" id="motdepasseconfirm" name="motdepasseconfirm" placeholder="******"required>
+            <input type="password" id="motdepasseconfirm" name="motdepasseconfirm" placeholder="******" required>
             <label for="datedenaissance">Date de naissance</label>
-            <input type="date" id="datedenaissance" name="datedenaissance" placeholder="JJ/MM/AA"required>
+            <input type="date" id="datedenaissance" name="datedenaissance" placeholder="JJ/MM/AA" required>
             <label for="nom">Nom</label>
-            <input type="texte" id="nom" name="nom" placeholder="DUPONT"required>
+            <input type="texte" id="nom" name="nom" placeholder="DUPONT" required>
             <label for="prenom">Prénom</label>
-            <input type="texte" id="prenom" name="prenom" placeholder="Patrick"required>
+            <input type="texte" id="prenom" name="prenom" placeholder="Patrick" required>
             <label for="mail">Mail</label>
-            <input type="mail" id="mail" name="mail" placeholder="ABCDEF@ABCDEF"required>
+            <input type="mail" id="mail" name="mail" placeholder="ABCDEF@ABCDEF" required>
             <label for="sexe">Sexe</label>
             <input list="sexeHF" id="sexe" name="sexe" placeholder="Homme/Femme">
             <datalist id="sexeHF">
@@ -74,7 +74,7 @@
                 <option value="Niveau I">
             </datalist>
             <label for="tel">Téléphone</label>
-            <input type="tel" id="tel" name="tel" placeholder="0123456789"required>
+            <input type="tel" id="tel" name="tel" placeholder="0123456789" required>
             <label for="hobbies">Cochez ce qu'il vous plait</label>
             <div id="checkbox">
                 <input type="checkbox" id="music" name="interest" value="music">
@@ -113,9 +113,9 @@
         </div>
         <div id="navbar2">
             <div id="navbar2align">
-                <a href="Acceuil.html">Acceuil</a>
-                <a href="Acceuil.html">Agenda</a>
-                <a href="Acceuil.html">Evenement</a>
+                <a href="connexion.html">Acceuil</a>
+                <a href="../work-in-progress/work-in-progress.html">Agenda</a>
+                <a href="../work-in-progress/work-in-progress.html">Evenement</a>
             </div>
         </div>
     </footer>
