--- a/motdepasse.html
+++ b/motdepasse.html
@@ -65,9 +65,9 @@
         </div>
         <div id="navbar2">
             <div id="navbar2align">
-                <a href="Acceuil.html">Acceuil</a>
-                <a href="Acceuil.html">Agenda</a>
-                <a href="Acceuil.html">Evenement</a>
+                <a href="connexion.html">Acceuil</a>
+                <a href="../work-in-progress/work-in-progress.html">Agenda</a>
+                <a href="../work-in-progress/work-in-progress.html">Evenement</a>
             </div>
         </div>
     </footer>
