--- a/motdepasse.html
+++ b/motdepasse.html
@@ -27,8 +27,8 @@
             <div id="navbar">
                 <nav>
                     <a href="connexion.html">Acceuil</a>
-                    <a href="../work-in-progress/work-in-progress.html">Agenda</a>
-                    <a href="../work-in-progress/work-in-progress.html">Evenement</a>
+                    <a href="work-in-progress.html">Agenda</a>
+                    <a href="work-in-progress.html">Evenement</a>
                 </nav>
             </div>
             <div id="input">
@@ -66,8 +66,8 @@
         <div id="navbar2">
             <div id="navbar2align">
                 <a href="connexion.html">Acceuil</a>
-                <a href="../work-in-progress/work-in-progress.html">Agenda</a>
-                <a href="../work-in-progress/work-in-progress.html">Evenement</a>
+                <a href="work-in-progress.html">Agenda</a>
+                <a href="work-in-progress.html">Evenement</a>
             </div>
         </div>
     </footer>
